--- a/wcfm/assets/css/gronc-style-gron-delivery.css
+++ b/wcfm/assets/css/gronc-style-gron-delivery.css
@@ -8,3 +8,36 @@
 .wcfm-action-icon {
   text-align: center;
 }
+.gron_backdrop {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.1);
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 99999;
+  -webkit-backdrop-filter: blur(3px);
+  backdrop-filter: blur(3px);
+  border-radius: 3px;
+}
+.gron_modal {
+  max-width: 300px;
+  width: 100%;
+  padding: 20px;
+  position: absolute;
+  z-index: 9999999;
+  background: #fff;
+  right: 145px;
+  top: 0;
+}
+.gron_modal .ci_modal_title {
+  display: block;
+  float: none;
+}
+.gron_modal #gron-delivery-slots-form .gron_each_field label {
+  width: 111px;
+  margin-bottom: 17px;
+}
+.gron_modal #gron-delivery-slots-form .gron_each_field input[type=time] {
+  width: calc( 100% - 117px );
+}
