--- a/wcfm/assets/css/notice.css
+++ b/wcfm/assets/css/notice.css
@@ -9,6 +9,10 @@
   border-color: #e85656;
   box-shadow: 0 0 5px #e8565655;
 }
+.gron_wcfm_notice.gron_notice_info {
+  border-color: #17a2b8;
+  box-shadow: 0 0 5px #17a2b855;
+}
 .gron_wcfm_notice  p {
   margin-bottom: 0;
 }
