--- a/wcfm/assets/css/gron-geo-routes.css
+++ b/wcfm/assets/css/gron-geo-routes.css
@@ -6,6 +6,17 @@
   padding: 10px 20px 20px 20px;
   background: #fff;
 }
+.gron_route_filter_options {
+  margin-top: 15px;
+  margin-bottom: 21px;
+  margin-left: 10px;
+}
+.gron_route_filter_options select {
+  border: 1px solid #ccc;
+  padding: 5px 17px;
+  border-radius: 0;
+  background: #fff;
+}
 
 #gron-route-details-panel ul {
   list-style: none;
@@ -17,13 +28,16 @@
 #gron-route-details-panel ul li {
   width: 31%;
   display: inline-block;
-  vertical-align: middle;
+  vertical-align: top;
   margin-left: 1%;
   margin-right: 1%;
   margin-bottom: 2%;
   padding: 15px;
-  background-color: #ebfff5;
+  background-color: #fafafa;
   border-radius: 5px;
+  height: 165px;
+  border: 1px solid #3AB57B;
+  box-shadow: 0 0 7px rgba(0,0,0,0.15);
 }
 .grons_single_info {
   max-width: 300px;
@@ -32,10 +46,6 @@
 .grons_single_info p {
   margin-bottom: 5px;
 }
-.gron_help_text {
-  border-left: 2px solid #aaa;
-  padding-left: 11px;
-}
-.gron_help_text .wcfmfa {
-  font-size: 1rem;
+#gron-map-settings-notice {
+  display: none;
 }
