--- a/wcfm/assets/css/notice.css
+++ b/wcfm/assets/css/notice.css
@@ -4,6 +4,7 @@
   background: #fff;
   margin-bottom: 15px;
   margin-top: 15px;
+  display: none;
 }
 .gron_wcfm_notice.gron_notice_error {
   border-color: #e85656;
