--- a/wcfm/assets/css/gron-geo-routes.css
+++ b/wcfm/assets/css/gron-geo-routes.css
@@ -32,10 +32,9 @@
   margin-left: 1%;
   margin-right: 1%;
   margin-bottom: 2%;
-  padding: 15px;
+  padding: 5px 11px;
   background-color: #fafafa;
   border-radius: 5px;
-  height: 165px;
   border: 1px solid #3AB57B;
   box-shadow: 0 0 7px rgba(0,0,0,0.15);
 }
@@ -44,5 +43,5 @@
   color: #111;
 }
 .grons_single_info p {
-  margin-bottom: 5px;
+  margin-bottom: 0;
 }
