--- a/wcfm/assets/css/gron-vendor-settings.css
+++ b/wcfm/assets/css/gron-vendor-settings.css
@@ -6,7 +6,18 @@
   color: #17a2b8;
 }
 p.wcfm_title {
-  width: calc( 70% - 60px );
+  width: calc( 61% - 91px );
+}
+
+/* General Settings Styles */
+.delivery_by_me_field label {
+  margin-left: 20px;
+  font-size: 15px;
+  cursor: pointer;
+}
+.delivery_by_me_field label .radio_text {
+  position: relative;
+  top: -2px;
 }
 
 div#wcfm-main-contentainer #gron-vendor-settings .gron_table [class*=" fa-"]:before {
