--- a/wcfm/assets/css/gron-admin-settings.css
+++ b/wcfm/assets/css/gron-admin-settings.css
@@ -2,11 +2,15 @@ p.wcfm_title {
   width: calc( 51% - 91px );
 }
 .delivery_by_seller_field label {
-  margin-left: 20px;
+  margin-right: 20px;
   font-size: 15px;
   cursor: pointer;
 }
 .delivery_by_seller_field label .radio_text {
   position: relative;
   top: -2px;
+}
+#wcfm-main-contentainer .broadcast_time_limit input[type="number"]#time-limit.wcfm-text {
+  width: 91px;
+  margin-bottom: 0;
 }
