--- a/wcfm/assets/css/gron-vendor-settings.css
+++ b/wcfm/assets/css/gron-vendor-settings.css
@@ -1,3 +1,68 @@
+.icon-danger {
+  color: #e85656;
+}
+.icon-info {
+  color: #17a2b8;
+}
+div#wcfm-main-contentainer #gron-settings .gron_table [class*=" fa-"]:before {
+  font-weight: 500;
+}
+
+#wcfm-main-contentainer table.gron_table tbody td {
+  background-color: transparent;
+}
+.gron_table > tbody > tr:nth-of-type(odd) {
+  background-color: #f9f9f9;
+}
+
+#gron-delivery-settings-save-button {
+  margin-right: 21px;
+}
+
+#wcfm-main-contentainer table.gron_table {
+  margin-top: 0;
+}
+.wcfm-action-icon {
+  text-align: center;
+}
+.gron_backdrop {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.1);
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 99999;
+  -webkit-backdrop-filter: blur(3px);
+  backdrop-filter: blur(3px);
+  border-radius: 3px;
+}
+.gron_modal {
+  max-width: 300px;
+  width: 100%;
+  padding: 20px;
+  position: fixed;
+  z-index: 9999999;
+  background: #fff;
+  left: calc(50% - 150px);
+  top: 30vh;
+}
+.gron_modal .ci_modal_title {
+  display: block;
+  float: none;
+}
+.gron_modal #gron-delivery-slots-form .gron_each_field label {
+  width: 111px;
+  margin-bottom: 17px;
+}
+.gron_modal #gron-delivery-slots-form .gron_each_field input[type=time] {
+  width: calc( 100% - 117px );
+}
+#gron-delivery-slot-template {
+  display: none;
+}
+
+/* General Settings Field */
 .each_field {
   margin-bottom: 15px;
 }
