--- a/assets/css/gron-woocommerce.css
+++ b/assets/css/gron-woocommerce.css
@@ -1,11 +1,18 @@
-#gron_collection_type_field .woocommerce-input-wrapper {
+.gron_cp_store_name {
+  display: block;
+  font-size: 1.1em;
+  font-weight: 600;
+  margin-top: 25px;
+  line-height: 1.1;
+}
+.gron_collection_type .woocommerce-input-wrapper {
   position: relative;
   background-color: #eee;
 }
-#gron_collection_type_field .woocommerce-input-wrapper input[type=radio] {
+.gron_collection_type .woocommerce-input-wrapper input[type=radio] {
   display: none;
 }
-#gron_collection_type_field .woocommerce-input-wrapper label {
+.gron_collection_type .woocommerce-input-wrapper label {
   display: inline-block;
   background-color: #eee;
   padding: 1px 9px;
@@ -15,15 +22,15 @@
   transition: 0.3s linear;
   box-shadow: 0 0 5px rgba( 0, 0, 0, 0.1 );
 }
-#gron_collection_type_field .woocommerce-input-wrapper label:hover {
+.gron_collection_type .woocommerce-input-wrapper label:hover {
   border-color: #3AB57B;
 }
 
-#gron_collection_type_field .woocommerce-input-wrapper label.active {
+.gron_collection_type .woocommerce-input-wrapper label.active {
   background-color: #3AB57B;
   color: #fff;
 }
-#gron_collection_type_field .woocommerce-input-wrapper #gron_collection_type_deliver_to_home + label {
+.gron_collection_type .woocommerce-input-wrapper #gron_collection_type_deliver_to_home + label {
   margin-left: 3px;
 }
 
