--- a/wcfm/assets/css/gron-boy-delivery-requests.css
+++ b/wcfm/assets/css/gron-boy-delivery-requests.css
@@ -35,6 +35,27 @@
   justify-content: center;
 }
 
+tr.processing td {
+  position: relative;
+  transition: 0.3s linear;
+}
+tr.processing td::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+tr.accept.processing td::after {
+  background-color: rgba(74, 255, 80, 0.3);
+}
+
+tr.reject.processing td::after {
+  background-color: rgba(255, 74, 74, 0.3);
+}
+
 div#wcfm-main-contentainer #gron-delivery-requests .gron_table [class*=" fa-"]:before {
   font-weight: 600;
 }
