--- a/wcfm/assets/css/gron-boy-delivery-requests.css
+++ b/wcfm/assets/css/gron-boy-delivery-requests.css
@@ -37,12 +37,15 @@
 tr .status {
   text-transform: capitalize;
 }
-
-
-/* Actions style */
+tr .status a {
+  text-transform: initial;
+}
 #wcfm-main-contentainer table tbody tr.accepted td {
   background-color: rgba(74, 255, 80, 0.3);
+  color: #444;
 }
+
+/* Actions style */
 tr.processing td {
   position: relative;
   transition: 0.3s linear;
