--- a/wcfm/assets/css/gron-vendor-delivery-notifications.css
+++ b/wcfm/assets/css/gron-vendor-delivery-notifications.css
@@ -39,6 +39,10 @@ div#wcfm-main-contentainer #gron-delivery-requests .gron_table [class*=" fa-"]:b
   font-weight: 600;
 }
 
+#wcfm-main-contentainer table.gron_table>tbody>tr:nth-of-type(odd)>* {
+  background-color: #f5f5f5;
+}
+
 tr .status {
   text-transform: capitalize;
 }
