--- a/wcfm/assets/css/gron-vendor-settings.css
+++ b/wcfm/assets/css/gron-vendor-settings.css
@@ -7,6 +7,9 @@
 div#wcfm-main-contentainer #gron-settings .gron_table [class*=" fa-"]:before {
   font-weight: 500;
 }
+#wcfm-main-contentainer table.gron_table>tbody>tr:nth-of-type(odd)>* {
+  background-color: #f5f5f5;
+}
 
 #wcfm-main-contentainer table.gron_table tbody td {
   background-color: transparent;
