--- a/wcfm/assets/css/gron-boy-delivery-requests.css
+++ b/wcfm/assets/css/gron-boy-delivery-requests.css
@@ -82,3 +82,5 @@ div#wcfm-main-contentainer #gron-delivery-requests .gron_table [class*=" fa-"]:b
 #wcfm-main-contentainer table.gron_table>tbody>tr:nth-of-type(odd)>* {
   background-color: #f5f5f5;
 }
+
+/* Page specific styles */
