--- a/wcfm/assets/css/gron-vendor-delivery-notifications.css
+++ b/wcfm/assets/css/gron-vendor-delivery-notifications.css
@@ -53,3 +53,21 @@ tr .status a {
   background-color: rgba(74, 255, 80, 0.3);
   color: #444;
 }
+
+tr.processing td {
+  position: relative;
+  transition: 0.3s linear;
+}
+tr.processing td::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/* Page specific */
+tr.delivered.processing td::after {
+  background-color: rgba(74, 255, 80, 0.3);
+}
