--- a/assets/css/gron-woocommerce.css
+++ b/assets/css/gron-woocommerce.css
@@ -9,7 +9,7 @@
   position: relative;
   background-color: #eee;
 }
-.gron_radio_select .woocommerce-input-wrapper input[type=radio] {
+.gron_radio_select .woocommerce-input-wrapper input[type="radio"] {
   display: none;
 }
 .woocommerce form .form-row.gron_radio_select .woocommerce-input-wrapper label {
@@ -22,18 +22,24 @@
   border-radius: 5px;
   cursor: pointer;
   border: 2px solid transparent;
-  transition: 0.3s linear;
-  box-shadow: 0 0 5px rgba( 0, 0, 0, 0.1 );
+  -webkit-transition: all 0.15s;
+  -moz-transition: all 0.15s;
+  -o-transition: all 0.15s;
+  transition: all 0.15s;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 .gron_radio_select .woocommerce-input-wrapper label:hover {
-  border-color: #3AB57B;
+  border-color: #3ab57b;
 }
 
 .gron_radio_select .woocommerce-input-wrapper label.active {
-  background-color: #3AB57B;
+  background-color: #3ab57b;
   color: #fff;
 }
-.gron_radio_select .woocommerce-input-wrapper input[value=deliver_to_home] + label {
+.gron_radio_select
+  .woocommerce-input-wrapper
+  input[value="deliver_to_home"]
+  + label {
   margin-left: 3px;
 }
 
@@ -60,13 +66,53 @@
 
 .gron_vendor_list {
   display: none;
-  -webkit-transition: all 0.35s ease-out;
-  -moz-transition: all 0.35s ease-out;
-  -o-transition: all 0.35s ease-out;
-  transition: all 0.35s ease-out;
-  box-shadow: 0 0 13px rgba(0,0,0,0.1);
+  -webkit-transition: all 0.55s ease-out;
+  -moz-transition: all 0.55s ease-out;
+  -o-transition: all 0.55s ease-out;
+  transition: all 0.55s ease-out;
+  box-shadow: 0 0 13px rgba(0, 0, 0, 0.1);
+}
+.gron_vendor_list * {
+	-webkit-transition: all 0.15s;
+	-moz-transition: all 0.15s;
+	-o-transition: all 0.15s;
+	transition: all 0.15s;
 }
 .woocommerce form .form-row.gron_vendor_list {
   padding: 15px;
   margin-top: 25px;
+}
+.gron_vendor_list .woocommerce-input-wrapper {
+	background-color: transparent;
+	display: block;
+}
+.gron_vendor_list .woocommerce-input-wrapper label {
+  width: calc( 50% - 10px );
+  margin-top: 13px;
+  background-color: #f5f5f5;
+  position: relative;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.gron_vendor_list .gron_v_name {
+	font-weight: 600;
+	font-size: 1.1em;
+}
+.gron_vendor_list .gron_v_addr {
+	font-size: 0.9em;
+	display: block;
+}
+
+.gron_vendor_list .gron_v_distance {
+	background-color: #fff;
+    padding: 3px 8px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0,0,0,0.1);
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+
+.gron_vendor_list .woocommerce-input-wrapper label.active .gron_v_distance {
+	background-color: #159459;
 }
