--- a/assets/css/gron-woocommerce.css
+++ b/assets/css/gron-woocommerce.css
@@ -64,31 +64,41 @@
 
 /*? Version 2 styles */
 
-.gron_vendor_list {
+.gron_fields_box {
   display: none;
   -webkit-transition: all 0.55s ease-out;
   -moz-transition: all 0.55s ease-out;
   -o-transition: all 0.55s ease-out;
   transition: all 0.55s ease-out;
   box-shadow: 0 0 13px rgba(0, 0, 0, 0.1);
+  padding: 15px;
+  margin-top: 25px;
 }
+
+.gron_field_wrapper {
+  display: none;
+}
+.woocommerce form .form-row.gron_field_wrapper {
+  margin-top: 11px;
+}
+
+.woocommerce form .form-row.gron_field_wrapper:first-child {
+  margin-top: 0;
+}
+
 .gron_vendor_list * {
 	-webkit-transition: all 0.15s;
 	-moz-transition: all 0.15s;
 	-o-transition: all 0.15s;
 	transition: all 0.15s;
 }
-.woocommerce form .form-row.gron_vendor_list {
-  padding: 15px;
-  margin-top: 25px;
-}
+
 .gron_vendor_list .woocommerce-input-wrapper {
 	background-color: transparent;
 	display: block;
 }
 .gron_vendor_list .woocommerce-input-wrapper label {
   width: calc( 50% - 10px );
-  margin-top: 13px;
   background-color: #f5f5f5;
   position: relative;
   margin-left: 5px;
